non-empty attrib_list for glXCreateContextAttribsARB

empty list is legal but causes bogus context on at least i915

BUG: 321843
REVIEW: 111355
FIXED-IN: 4.11